<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sleep_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sleep_tracker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sleep_tracker_button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleep_tracker_session_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sleep_tracker_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1h 23m 45s" />

    <TextView
        android:id="@+id/sleep_tracker_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sleep_tracker_session_time"
        app:layout_constraintStart_toStartOf="@+id/sleep_tracker_session_time"
        tools:text="Tues, Jan 15 2018" />

    <TextView
        android:id="@+id/sleep_tracker_started_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Started:"
        app:layout_constraintBottom_toTopOf="@+id/sleep_tracker_start_time"
        app:layout_constraintStart_toStartOf="@+id/sleep_tracker_start_time" />

    <TextView
        android:id="@+id/sleep_tracker_waketime_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Wake-Time Goal:"
        app:layout_constraintStart_toStartOf="@+id/sleep_tracker_session_time"
        app:layout_constraintTop_toBottomOf="@+id/sleep_tracker_button" />

    <TextView
        android:id="@+id/sleep_tracker_duration_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sleep Duration Goal:"
        app:layout_constraintStart_toStartOf="@+id/sleep_tracker_waketime_goal_title"
        app:layout_constraintTop_toBottomOf="@+id/sleep_tracker_waketime_goal_title" />

    <TextView
        android:id="@+id/sleep_tracker_duration_goal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Error"
        app:layout_constraintBaseline_toBaselineOf="@+id/sleep_tracker_duration_goal_title"
        app:layout_constraintStart_toEndOf="@+id/sleep_tracker_duration_goal_title"
        tools:text="7h 30m" />

    <TextView
        android:id="@+id/sleep_tracker_waketime_goal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Error"
        app:layout_constraintBaseline_toBaselineOf="@+id/sleep_tracker_waketime_goal_title"
        app:layout_constraintStart_toEndOf="@+id/sleep_tracker_waketime_goal_title"
        tools:text="8:30 a.m." />
</androidx.constraintlayout.widget.ConstraintLayout>